mysql error fix

--- a/src/main/resources/mysql.properties
+++ b/src/main/resources/mysql.properties
@@ -1,7 +1,7 @@
 #Database related properties
 database.driver=com.mysql.jdbc.Driver
 database.url=jdbc:mysql://localhost:3306/space_flight_manager
-database.url.options=?serverTimezone=UTC&useSSL=false&createDatabaseIfNotExist=true
+database.url.options=?serverTimezone=UTC&useSSL=false&createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true
 database.user=student
 database.password=student
 
